feat: add POST users/{id}/login endpoint
